# adventofcode

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  LICENSE  README.md  aoc.sh
cmake/: clang-format.cmake  cmake-format.cmake  flags.cmake  packages.cmake
src/2022/: CMakeLists.txt
src/2022/01/: input.h  main.cpp
src/2022/02/: input.h  main.cpp
src/2022/03/: input.h  main.cpp
src/2022/04/: input.h  main.cpp
src/2022/05/: input.h  main.cpp
src/2022/06/: input.h  main.cpp
src/2022/07/: input.h  main.cpp
src/2022/08/: input.h  main.cpp
src/2022/09/: input.h  main.cpp
src/2022/10/: input.h  main.cpp
src/2022/11/: input.h  main.cpp
src/2022/12/: input.h  main.cpp
src/2022/13/: input.h  main.cpp
src/2022/14/: input.h  main.cpp
src/2022/15/: input.h  main.cpp
src/2022/16/: input.h  main.cpp
src/2022/17/: input.h  main.cpp
src/2022/18/: input.h  main.cpp
src/2022/19/: input.h  main.cpp
src/2022/20/: input.h  main.cpp
src/2022/21/: input.h  main.cpp
src/2022/22/: input.h  main.cpp
src/2022/23/: input.h  main.cpp
src/2022/24/: input.h  main.cpp
src/2022/25/: input.h  main.cpp
src/2023/: CMakeLists.txt
src/2023/01/: input.h  main.cpp
src/2023/02/: input.h  main.cpp
src/2025/: CMakeLists.txt
src/2025/01/: main.cpp
src/2025/02/: main.cpp
src/2025/03/: main.cpp
src/2025/04/: main.cpp
src/2025/05/: main.cpp
src/2025/06/: main.cpp
src/2025/07/: main.cpp
src/2025/08/: main.cpp
src/2025/09/: main.cpp
src/2025/10/: main.cpp
src/2025/11/: main.cpp
src/2025/12/: main.cpp
