add_executable(2022_01 01/main.cpp)
add_executable(2022_02 02/main.cpp)
add_executable(2022_03 03/main.cpp)
add_executable(2022_04 04/main.cpp)
add_executable(2022_05 05/main.cpp)
add_executable(2022_06 06/main.cpp)
add_executable(2022_07 07/main.cpp)
add_executable(2022_08 08/main.cpp)
add_executable(2022_09 09/main.cpp)
add_executable(2022_10 10/main.cpp)
add_executable(2022_11 11/main.cpp)
add_executable(2022_12 12/main.cpp)
add_executable(2022_13 13/main.cpp)
add_executable(2022_14 14/main.cpp)
add_executable(2022_15 15/main.cpp)
add_executable(2022_16 16/main.cpp)
add_executable(2022_17 17/main.cpp)
add_executable(2022_18 18/main.cpp)
add_executable(2022_20 20/main.cpp)
add_executable(2022_21 21/main.cpp)
